fix map overflow on the map page

--- a/table-of-contents-style-homepage/map.css
+++ b/table-of-contents-style-homepage/map.css
@@ -56,7 +56,7 @@ header {
 
 .mapid {
   height: 90vh;
-  width: 125%;
+  width: 100%;
   z-index: 1;
 }
 
